# freenect2cam

./: .gitignore  CMakeLists.txt  Maky.toml  README.md
include/: video_device.hpp  video_tool.hpp
modprobe/: v4l2loopback.conf
src/: main.cpp  video_device.cpp  video_tool.cpp
systemd/: freenect2cam.service
